--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
+    "jsx": "react-jsx",
     "paths": {
       "@/*": [
         "./*"
@@ -12,6 +14,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "workbox-config.js",
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
